<resources>
    <string name="app_name">Defuse</string>
    <string name="help_button">I Need Help</string>
    <string name="score_button">High Scores</string>
    <string name="start_button">Start</string>
    <string name="name_text">Enter Your Name</string>
    <string name="exit_help">I Got It</string>
    <string name="exit_score">Go Back</string>
    <string name="help_content">The game displays outline maps with Greek characters inside. When every round starts, Greek characters will display in national maps for about 3 seconds and then disappear. The player should remember the outline locations and identify the correct match letter base on the outline. Selecting buttons by drag and drop. The player has to solve as many puzzles as they can within a time limit. The app will keep track of individual players’ high scores(Time elapsed).</string>
    <string name="help_title">Guide</string>
    <string name="timer_text">Timer</string>
    <string name="timer_hint">01:00:00</string>
    <string name="time_up">Time Up!</string>
    <string name="remaining_text">Rounds</string>
    <string name="remaining_hint">01/10</string>
    <string name="fuse">Fuse</string>
    <string name="playground">Playground</string>
    <string name="gameOver">Game Over</string>
    <string name="gameWin">Game Win</string>
    <string name="help_button_2">Help</string>
    <string name="home_button">Home</string>
    <string name="ranking_text">Ranking</string>
    <string name="hdrPlayer">Player</string>
    <string name="hdrScore">Score</string>
</resources>
