<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".WelcomeActivity"
    android:background="@drawable/bg_welcome"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/gameName_textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:textStyle="bold|italic"
        android:textColor="#ffffff"
        android:textSize="50sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playerName_editText"
        android:background="#ffffff"
        android:inputType="textCapWords"
        android:hint="Enter your name here"
        android:layout_below="@+id/gameName_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="140dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:id="@+id/start_button"
        android:layout_below="@+id/playerName_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:clickable="true"
        android:onClick="start_new_game"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_button"
        android:id="@+id/toScores"
        android:clickable="true"
        android:onClick="loadScorePage"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/gameName_textView"
        android:layout_toStartOf="@+id/gameName_textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_button"
        android:id="@+id/toHelp"
        android:layout_alignTop="@+id/toScores"
        android:layout_toRightOf="@+id/gameName_textView"
        android:layout_toEndOf="@+id/gameName_textView"
        android:clickable="true"
        android:onClick="loadHelpPage" />

</RelativeLayout>
