<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csci3320.defuse.GameActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/timerTitle_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.10"
            android:text="@string/timer_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/timerContent_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:hint="@string/timer_hint"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/roundTitle_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.10"
            android:text="@string/remaining_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/roundContent_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/remaining_hint"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bombaImageView"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:background="@drawable/bomb" />

            <ImageView
                android:id="@+id/ropeImageView9"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:background="@drawable/rope" />

            <ImageView
                android:id="@+id/ropeImageView8"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:background="@drawable/rope" />

            <ImageView
                android:id="@+id/ropeImageView7"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_column="3"
                android:background="@drawable/rope" />

            <ImageView
                android:id="@+id/ropeImageView6"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_column="4"
                android:background="@drawable/rope" />

            <ImageView
                android:id="@+id/ropeImageView5"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_column="5"
                android:background="@drawable/rope" />

            <ImageView
                android:id="@+id/ropeImageView4"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_column="6"
                android:background="@drawable/rope" />

            <ImageView
                android:id="@+id/ropeImageView3"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_column="7"
                android:background="@drawable/rope" />

            <ImageView
                android:id="@+id/ropeImageView2"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_column="8"
                android:background="@drawable/rope" />

            <ImageView
                android:id="@+id/ropeImageView1"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_column="9"
                android:background="@drawable/rope" />

            <ImageView
                android:id="@+id/ropeImageView0"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_column="10"
                android:background="@drawable/rope" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/mapButton0"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1" />

            <Button
                android:id="@+id/mapButton1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="2" />

            <Button
                android:id="@+id/mapButton2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/mapButton3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1" />

            <Button
                android:id="@+id/mapButton4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="2" />

            <Button
                android:id="@+id/mapButton5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/mapButton6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1" />

            <Button
                android:id="@+id/mapButton7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="2" />

            <Button
                android:id="@+id/mapButton8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginRight="80dp"
            android:text="@string/home_button" />

        <Button
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="80dp"
            android:text="@string/help_button_2" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/wheel" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/button2"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/button2"
        android:layout_toRightOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/button3"
        android:layout_marginLeft="7dp"
        android:layout_toEndOf="@+id/button3"
        android:layout_toRightOf="@+id/button3" />

</RelativeLayout>
